@@ -1,3 +1,11 @@
+Sat Feb 21 00:06:29 2026  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/geniustests.txt: add a test for passing reference through
+
+	* src/mpwrap.c: silence warning
+
+	* src/parse.y: avoid improbable null dereference
+
 Fri Feb 20 17:30:26 2026  Jiri (George) Lebl <jiri.lebl@gmail.com>
 
 	* src/dict.[ch], src/eval.c: Fix a crash on referencing, fix referencing
